Update styles.css to fix navbar on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -389,7 +389,14 @@ footer {
   .header-logo {
     height: 50px;
   }
-
+   #nav-bar {
+    width: 100%;
+    font-size: 0.8rem;
+  }
+  #nav-bar a:hover,
+  #nav-bar a:active {
+    font-size: 0.9rem;
+  }
   .reel-img-div:hover img {
     border-radius: 5px;
     top: -5;
